# Simple-OpenGL-Image-Library

./: CMakeLists.txt
src/: SOIL.c
test/: CMakeLists.txt
